backend-dev8018.err.log
INFO:     Will watch for changes in these directories: ['C:\\Users\\Julien\\Desktop\\Antigravity\\DringDring\\backend']
INFO:     Uvicorn running on http://127.0.0.1:8018 (Press CTRL+C to quit)
INFO:     Started reloader process [28296] using StatReload
INFO:     Started server process [31192]
INFO:     Waiting for application startup.
INFO:     Application startup complete.
WARNING:  StatReload detected changes in 'app\routes\deliveries.py'. Reloading...
INFO:     Shutting down
INFO:     Waiting for application shutdown.
INFO:     Application shutdown complete.
INFO:     Finished server process [31192]
Process SpawnProcess-2:
Traceback (most recent call last):
  File "C:\Users\Julien\AppData\Local\Programs\Python\Python310\lib\multiprocessing\process.py", line 314, in _bootstrap
    self.run()
  File "C:\Users\Julien\AppData\Local\Programs\Python\Python310\lib\multiprocessing\process.py", line 108, in run
    self._target(*self._args, **self._kwargs)
  File "C:\Users\Julien\Desktop\Antigravity\DringDring\backend\.venv\lib\site-packages\uvicorn\_subprocess.py", line 78, in subprocess_started
    target(sockets=sockets)
  File "C:\Users\Julien\Desktop\Antigravity\DringDring\backend\.venv\lib\site-packages\uvicorn\server.py", line 62, in run
    return asyncio.run(self.serve(sockets=sockets))
  File "C:\Users\Julien\AppData\Local\Programs\Python\Python310\lib\asyncio\runners.py", line 44, in run
    return loop.run_until_complete(main)
  File "C:\Users\Julien\AppData\Local\Programs\Python\Python310\lib\asyncio\base_events.py", line 649, in run_until_complete
    return future.result()
  File "C:\Users\Julien\Desktop\Antigravity\DringDring\backend\.venv\lib\site-packages\uvicorn\server.py", line 69, in serve
    config.load()
  File "C:\Users\Julien\Desktop\Antigravity\DringDring\backend\.venv\lib\site-packages\uvicorn\config.py", line 458, in load
    self.loaded_app = import_from_string(self.app)
  File "C:\Users\Julien\Desktop\Antigravity\DringDring\backend\.venv\lib\site-packages\uvicorn\importer.py", line 21, in import_from_string
    module = importlib.import_module(module_str)
  File "C:\Users\Julien\AppData\Local\Programs\Python\Python310\lib\importlib\__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1050, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1027, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1006, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 688, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 883, in exec_module
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "C:\Users\Julien\Desktop\Antigravity\DringDring\backend\app\main.py", line 4, in <module>
    from app.routes import (
  File "C:\Users\Julien\Desktop\Antigravity\DringDring\backend\app\routes\deliveries.py", line 645
    return _rows_to_dicts(cur)
                              ^
IndentationError: unindent does not match any outer indentation level
